--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -8,7 +8,10 @@
             type="submit"
             class="btn btn-success"
             [disabled]="!recipeForm.valid">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button
+            type="button"
+            class="btn btn-danger"
+            (click)="onCancel()">Cancel</button>
         </div>
       </div>
 
@@ -40,7 +43,7 @@
 
       <div class="row">
           <div class="col-xs-12">
-            <img src="" class="img-responsive">
+            <img src="{{ recipeForm.value['imagePath'] }}" class="img-responsive">
           </div>
       </div>
 
