--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -36,14 +36,15 @@
                 type="text"
                 id="imagePath"
                 formControlName="imagePath"
-                class="form-control">
+                class="form-control"
+                #imagePath>
             </div>
           </div>
       </div>
 
       <div class="row">
           <div class="col-xs-12">
-            <img src="{{ recipeForm.value['imagePath'] }}" class="img-responsive">
+            <img [src]="imagePath.value" class="img-responsive">
           </div>
       </div>
 
