--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,18 +1,18 @@
 <div class="row">
   <div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
-    <form (ngSubmit)="onSignup(f)" #f="ngForm">
+    <form (ngSubmit)="onSignup(f)" #f="ngForm" autocomplete="off">
 
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" ngModel class="form-control">
+        <input type="email" id="email" name="email" required ngModel class="form-control">
       </div>
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" ngModel class="form-control">
+        <input type="password" id="password" name="password" ngModel minlength="6" required class="form-control">
       </div>
 
-      <button class="btn btn-primary" type="submit">Sign Up</button>
+      <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Sign Up</button>
 
     </form>
   </div>
