--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,10 +14,12 @@
 
       <ul class="nav navbar-nav navbar-right">
 
-        <li><a routerLink="/signup">Register</a></li>
-        <li><a routerLink="/signin">Login</a></li>
+        <ng-template [ngIf]="!authService.isAuthenticated()">
+            <li><a routerLink="/signup">Register</a></li>
+            <li><a routerLink="/signin">Login</a></li>
+        </ng-template>
 
-        <li class="dropdown" appDropdown>
+        <li class="dropdown" appDropdown *ngIf="authService.isAuthenticated()">
           <a class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
           <ul style="cursor: pointer" class="dropdown-menu">
             <li><a style="cursor: pointer" (click)="onSaveData()">Save Data</a></li>
