--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,6 +19,8 @@
             <li><a routerLink="/signin">Login</a></li>
         </ng-template>
 
+        <li><a style="cursor: pointer;" (click)="onLogout()" *ngIf="authService.isAuthenticated()">Logout</a></li>
+
         <li class="dropdown" appDropdown *ngIf="authService.isAuthenticated()">
           <a class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
           <ul style="cursor: pointer" class="dropdown-menu">
