--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-xs-12 col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
+    <h2>Register</h2>
     <form (ngSubmit)="onSignup(f)" #f="ngForm" autocomplete="off">
 
       <div class="form-group">
